Added backup menu and button background colors for IE.

--- a/src/css/corpmsgslider.css
+++ b/src/css/corpmsgslider.css
@@ -1,5 +1,5 @@
 .cpmsl{position:relative;}
-.cpmsl-btn{background-color:rgba(255, 255, 255, 0.5);color:#fff;display:inline-block;padding:2px 2px 2px 2px;cursor:pointer;text-align:center;}
+.cpmsl-btn{background-color:rgb(255, 255, 255);background-color:rgba(255, 255, 255, 0.5);color:#fff;display:inline-block;padding:2px 2px 2px 2px;cursor:pointer;text-align:center;}
 .cpmsl-btn-active{color:#aa0007;cursor:default;}
 .cpmsl-menu{bottom:0;position:absolute;right:0;right:0;text-align:right;z-index:100;}
 .cpmsl-slide{background-repeat:no-repeat;left:0;position:absolute;top:0;vertical-align:middle;}
